@@ -2,6 +2,8 @@ glFusion ChangeLog
 
 v1.1.4
 ------
+- Allow anonymous users to email admin using contact form regarless of login
+  requirement (Mark)
 - User profile page did not properly honor showonline status and
   accept email from user status (Mark)
 - Integrated last 10 logged in users into stats
